logo size reduced, home button rounded and some divs changed

--- a/_includes/current.html
+++ b/_includes/current.html
@@ -1,13 +1,12 @@
 <div class="current">
     <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-1 grey-bg d-none d-sm-none d-md-block d-lg-block d-xl-block"></div>
-        <div class="col-sm-12 col-md-10 current-card">
+        <div class="col-sm-12 current-card">
 
-            <h3 class="float-in-down">Current <span class="maroon">Project</span> <i class="fas fa-project-diagram"></i></h3>
+            <h3 class="float-in-down">Current <span class="maroon">Project</span> <i class="fas fa-project-diagram small-icon"></i></h3>
             <p class="float-in-down">This work is supported by the National Science Foundation (NSF) via the CAREER: Broadening Participation in STEM: A Qualitative Analysis of African American Male STEM Majors’ Mathematics Experiences and Career Decisions grant (Award No. 1553379). Thus, I offer the following disclaimer: “This work is supported by the National Science Foundation. Any opinions, findings, and conclusions or recommendations expressed in this material are those of the PI and do not necessarily reflect the views of the National Science Foundation.”
             </p>
+            <br>
 
         </div>
-        <div class="col-sm-12 col-md-1 maroon-bg d-none d-sm-none d-md-block d-lg-block d-xl-block"></div>
     </div>
 </div>
