--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -53,17 +53,15 @@
      
         <div class="current">
             <div class="row justify-content-center">
-                <div class="float-in-down col-sm-12 col-md-1 grey-bg d-none d-sm-none d-md-block d-lg-block d-xl-block"></div>
-                    <div class="float-in-down col-sm-12 col-md-10 current-card">
+                    <div class="float-in-down col-sm-12 current-card">
 
-                        <h3 class="float-in-down">AAMMN <span class="maroon">Story</span> <i class="fas fa-users"></i></h3>
+                        <h3 class="float-in-down">AAMMN <span class="maroon">Story</span> <i class="fas fa-users small-icon"></i></h3>
                         <p class="float-in-down">The AAMMN is designed to enhance and support the mathematics achievement outcomes for African American male students. One purpose is to build a strong coalition of African American male scholars who are equipped with the knowledge base to bolster their career trajectories in mathematics-related fields. Another purpose is to establish an anti-deficit network that positions African American male students as mathematically capable, resilient, and astute.   
 
                                 While there are efforts on many fronts to broaden participation in STEM fields, few efforts exist at the undergraduate level to support African American male students who have a desire to pursue careers in STEM fields. Using mathematics as the linchpin, this network provides support to African American male students. More specifically, the AAMMN is designed to share educational activities, disseminate information about related opportunities (research, internship, fellowship, job, etc.), publicize research about their experiences (educational, STEM, racial, cultural, etc.), and spur action regarding their persistence and representation in mathematics-intensive fields. 
                                 </p>
 
                     </div>
-                <div class="float-in-down col-sm-12 col-md-1 maroon-bg d-none d-sm-none d-md-block d-lg-block d-xl-block"></div>
             </div>
         </div>
 
