--- a/_sass/header.sass
+++ b/_sass/header.sass
@@ -1,16 +1,17 @@
 .head-img
-    width: 350px
-    height: 56px
+    width: 230px
+    height: 37px
 
 .head-img-res
-    width: 350px
-    height: 56px    
+    width: 230px
+    height: 37px    
 
 .my-bg
     background-color: #333
 
 .my-link
     color: #fff !important
+    text-transform: uppercase
     transition-duration: 0.3s
     &:hover
         color: #afafaf !important
@@ -23,8 +24,8 @@
 
 @media screen and (max-width:520px)
     .head-img-res
-        width: 210px
-        height: 34px 
+        width: 180px
+        height: 29px 
     .navbar-toggler-icon
         font-size: 12px !important
 
