--- a/_includes/learn.html
+++ b/_includes/learn.html
@@ -2,11 +2,11 @@
     <h2 class="learn text-center float-in-down">Learn <span class="maroon">About </span> us</h2>
     <div class="row justify-content-between" id="learn-send-here">
         <div class="col-xl-5  col-sm-12 col-md-5 learn-card">
-            <h3 class="floating-left"><span class="maroon">MISSON </span> Statement <i class="fas fa-bullhorn maroon"></i></h3>
+            <h3 class="floating-left"><span class="maroon">MISSON </span> Statement <i class="fas fa-bullhorn maroon small-icon"></i></h3>
             <p class="floating-left">The African American Male Mathematics Network (AAMMN) is a collective network whose primary mission is to encourage, support, and empower African American men who have an interest in mathematics and mathematics-intensive fields to fulfill, achieve, and thrive in their mathematics-related aspirations</p>
         </div>
         <div class="col-xl-5 col-sm-12 col-md-5 learn-card">
-            <h3 class="floating-right"><span class="maroon">MEET </span> THE TEAM <i class="fas fa-users maroon"></i></h3>       
+            <h3 class="floating-right"><span class="maroon">MEET </span> THE TEAM <i class="fas fa-users maroon small-icon"></i></h3>       
             <p class="floating-right">The AAMMN is led by Dr. Christopher C. Jett whose research explores the experiences of high-achieving African American male STEM students. <a href="{{'advisory-board.html' | relative_url}}" class="maroon-click"> Click to learn about the team.</a></p>
         </div>
         
