--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -27,11 +27,13 @@
     margin: auto
     text-align: center
     box-shadow: 1px 3px 3px 3px rgba(0,0,0,0.6)
+    font-size: 13px
     padding: 0
-    line-height: 60px
+    line-height: 100px
+    border-radius: 100%
     display: block
-    width: 140px
-    height: 60px
+    width: 100px
+    height: 100px
     background-color: $mainColor
     color: #fff
     transition-duration: 0.3s
@@ -51,10 +53,8 @@
         height: 113px
         margin-bottom: 50px
 
-    .learn-more
-        width: 120px
-        height: 50px
-        line-height: 50px            
+   
+
 
 @media screen and (max-width:460px)
     .aammn-maroon
@@ -62,8 +62,9 @@
         height: 87px
         margin-top: 100px
 
+
     .learn-more
-        width: 100px
-        height: 40px
-        line-height: 40px
-        font-size: 13px    
+        width: 90px
+        height: 90px
+        line-height: 90px 
+        font-size: 11px 
