--- a/_includes/why.html
+++ b/_includes/why.html
@@ -1,5 +1,11 @@
 <div class="why text-center">
-    <h3 class="float-in-down"><span class="maroon">Why</span> we do it  <i class="fas fa-question-circle small-icon"></i></h3>
-    <p class="float-in-down">The AAMMN is designed to enhance and support the The AAMMN is designed to enhance and support the mathematics achievement outcomes for African American male students. One purpose is to build a strong coalition of African American male scholars who are equipped with the knowledge base to bolster their career trajectories in mathematics-related fields. Another purpose is to establish an anti-deficit network that positions African American male 
-        students as mathematically capable, resilient, and astute   </p>
+    <h3 class="float-in-down">
+        <span class="maroon">Why</span> we do it
+        <i class="fas fa-question-circle small-icon"></i>
+    </h3>
+    <p class="float-in-down">The AAMMN is designed to enhance and support the The AAMMN is designed to enhance and support the mathematics achievement
+        outcomes for African American male students. One purpose is to build a strong coalition of African American male
+        scholars who are equipped with the knowledge base to bolster their career trajectories in mathematics-related fields.
+        Another purpose is to establish an anti-deficit network that positions African American male students as mathematically
+        capable, resilient, and astute.</p>
 </div>
