final update for the 2nd order

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-5 footer-contact floating-left">
-                <p><i class="fas fa-envelope"></i>    mathieutwalters@gmail.com</p>
-                <p><i class="fas fa-map-marker-alt"></i>    Your address here.</p>
-                <p><i class="fas fa-mobile-alt"></i>    Your phone number here.</p>
+                <p>
+                    <i class="fas fa-envelope"></i> info@aamn.com</p>
+                <p>
+                    <i class="fas fa-map-marker-alt"></i> 1601 Maple St, Carrollton, GA 30118</p>
+                <p>
+                    <i class="fas fa-mobile-alt"></i> (404) 000-0000</p>
             </div>
             <div class="col-sm-12 col-md-7">
                 <nav class="footer-nav floating-right">
@@ -15,7 +18,11 @@
                     <a href="{{'contact.html' | relative_url}}">Contact</a>
 
                 </nav>
-                <p class="foot-logo floating-right"><img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""> </p>
+                <p class="foot-logo floating-right">
+                    <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""> </p>
+                <p class="foot-logo floating-right">
+                    <img src="{{ 'assets/img/nsf.png' | relative_url }}" class="head-img-nsf img-fluid" alt=""> </p>
+
 
             </div>
         </div>
