--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,39 @@
 <nav class="navbar navbar-expand-lg my-bg navbar-dark">
 
-    <a href="{{site.url}}" class="navbar-brand d-block d-lg-none floating left"><img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""></a>
+    <a href="{{site.url}}" class="navbar-brand d-block d-lg-none floating left">
+        <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt="">
+    </a>
 
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collpase_target">
-            <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
 
 
 
     <div class="collapse navbar-collapse" id="collpase_target">
 
-    <a href="{{site.url}}" class="navbar-brand d-none d-lg-block floating-left"><img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img img-fluid" alt=""></a>
+        <a href="{{site.url}}" class="navbar-brand d-none d-lg-block floating-left">
+            <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img img-fluid" alt="">
+        </a>
 
 
-    <ul class="navbar-nav ml-auto floating-right">
-        <li class="nav-item">
-            <a href="{{site.url}}" class="nav-link my-link my-active">Home</a>
-        </li>
-        <li class="nav-item">
-            <a href="{{'about.html' | relative_url}}" class="nav-link my-link">About Us</a>
-        </li>
-        <li class="nav-item">
-            <a href="{{'related-publications.html' | relative_url}}" class="nav-link my-link">Related Publications</a>
-        </li>
-        <li class="nav-item">
-            <a href="{{'advisory-board.html' | relative_url}}" class="nav-link my-link">Advisory Board</a>
-        </li>
-        <li class="nav-item">
-            <a href="{{'contact.html' | relative_url}}" class="nav-link my-link">Contact</a>
-        </li>
-    </ul>
+        <ul class="navbar-nav ml-auto floating-right">
+            <li class="nav-item">
+                <a href="{{site.url}}" class="nav-link my-link my-active">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{'about.html' | relative_url}}" class="nav-link my-link">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{'related-publications.html' | relative_url}}" class="nav-link my-link">Related Publications</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{'advisory-board.html' | relative_url}}" class="nav-link my-link">Advisory Board</a>
+            </li>
+            <li class="nav-item">
+                <a href="{{'contact.html' | relative_url}}" class="nav-link my-link">Contact</a>
+            </li>
+        </ul>
 
     </div>
 </nav>
