--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,9 @@
 <div class="banner">
-    <img src="{{ 'assets/img/aammn_maroon.png' | relative_url }}" alt="AAMMN" class="aammn-maroon float-in-down">
-    <h1 class="float-in-down">WELCOME TO <span class="maroon">AAMMN</span></h1>
-    <div class="float-in-down"> <a href="#learn-send-here" class="learn-more">LEARN MORE</a> </div>
+    <img src="{{ 'assets/img/aammn-main.png' | relative_url }}" alt="AAMMN" class="aammn-maroon float-in-down">
+    <h1 class="float-in-down">WELCOME TO
+        <span class="maroon">AAMMN</span>
+    </h1>
+    <div class="float-in-down">
+        <a href="#learn-send-here" class="learn-more">LEARN MORE</a>
+    </div>
 </div>
