--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -37,7 +37,11 @@ body
     background-image: url($baseurl + '/assets/img/team/robert.jpg')
 
 
-
+.p-links
+    color: #540000
+    font-weight: 700
+    &:hover
+        color: #540000    
 
 @import header   
 @import home     
