--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,160 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="{{ 'assets/css/bootstrap.min.css' | relative_url }}">
     <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
+    <link rel="icon shortcut" href="{{ 'assets/img/aammn-main.png' | relative_url }}" type="image/png">
     <title>{{site.name}} | Contact Us</title>
 </head>
+
 <body>
-        <nav class="navbar navbar-expand-lg my-bg navbar-dark">
+    <nav class="navbar navbar-expand-lg my-bg navbar-dark">
 
-                <a href="{{site.url}}" class="navbar-brand d-block d-lg-none floating-left"><img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""></a>
-            
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#collpase_target">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-            
-            
-            
-                <div class="collapse navbar-collapse" id="collpase_target">
-            
-                <a href="{{site.url}}" class="navbar-brand d-none d-lg-block floating-left"><img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img img-fluid" alt=""></a>
-            
-            
-                <ul class="navbar-nav ml-auto floating-right">
-                    <li class="nav-item">
-                        <a href="{{site.url}}" class="nav-link my-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{{'about.html' | relative_url}}" class="nav-link my-link">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{{'related-publications.html' | relative_url}}" class="nav-link my-link">Related Publications</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{{'advisory-board.html' | relative_url}}" class="nav-link my-link">Advisory Board</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{{'contact.html' | relative_url}}" class="nav-link my-link my-active">Contact</a>
-                    </li>
-                </ul>
-            
-                </div>
-            </nav>
+        <a href="{{site.url}}" class="navbar-brand d-block d-lg-none floating-left">
+            <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt="">
+        </a>
 
-            <div class="bg-heading contact-div">
-                <h2 class="float-in-down"> <span class="maroon">Contact </span> us</h2>
-            </div>
-            
-            <div class="contact-grid">
-                <div class="row float-in-down">
-                    
-                    <div class="col-sm-12 col-md-6 contact-card">
-                        <div class="contact-person">
-                            <div class="mugshot christopher"></div>
-                            <h3 class="maroon">Dr. Christopher C. Jett</h3>
-                            <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                            <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                        </div>
-                    </div>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#collpase_target">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-                    <div class="col-sm-12 col-md-6 contact-card">
-                        <div class="contact-person">
-                            <div class="mugshot duane"></div>
-                            <h3 class="maroon">Dr. Duane Cooper </h3>
-                            <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                            <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                        </div>
-                    </div>
-                
-                </div>
 
-                <div class="row float-in-down">
-                    
-                        <div class="col-sm-12 col-md-6 contact-card">
-                            <div class="contact-person">
-                                <div class="mugshot jacqueline"></div>
-                                <h3 class="maroon">Dr. Jacqueline Leonard</h3>
-                                <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                                <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                            </div>
-                        </div>
-    
-                        <div class="col-sm-12 col-md-6 contact-card">
-                            <div class="contact-person">
-                                <div class="mugshot robert"></div>
-                                <h3 class="maroon">Dr. Robert T. Palmer </h3>
-                                <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                                <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                            </div>
-                        </div>
-                    
-                </div>
 
-                <div class="row float-in-down">
-                    
-                        <div class="col-sm-12 col-md-6 contact-card">
-                            <div class="contact-person">
-                                <div class="mugshot christine"></div>
-                                <h3 class="maroon">Dr. Christine D. Thomas</h3>
-                                <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                            <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                            </div>
-                        </div>
-    
-                        <div class="col-sm-12 col-md-6 contact-card">
-                            <div class="contact-person">
-                                <div class="mugshot erica"></div>
-                                <h3 class="maroon">Dr. Erica N. Walker </h3>
-                                <p class="contact-p"><i class="fas fa-envelope maroon"></i> johndoe@gmail.com</p>
-                                <p class="contact-p"><i class="fas fa-mobile-alt maroon"></i> +900-11111-111</p>
-                        </div>
-                    
+        <div class="collapse navbar-collapse" id="collpase_target">
+
+            <a href="{{site.url}}" class="navbar-brand d-none d-lg-block floating-left">
+                <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img img-fluid" alt="">
+            </a>
+
+
+            <ul class="navbar-nav ml-auto floating-right">
+                <li class="nav-item">
+                    <a href="{{site.url}}" class="nav-link my-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{'about.html' | relative_url}}" class="nav-link my-link">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{'related-publications.html' | relative_url}}" class="nav-link my-link">Related Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{'advisory-board.html' | relative_url}}" class="nav-link my-link">Advisory Board</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{'contact.html' | relative_url}}" class="nav-link my-link my-active">Contact</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <div class="bg-heading contact-div">
+        <h2 class="float-in-down">
+            <span class="maroon">Contact </span> us</h2>
+    </div>
+
+    <div class="contact-grid">
+        <div class="row float-in-down">
+
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot christopher"></div>
+                    <h3 class="maroon">Dr. Christopher C. Jett</h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> cjett@westga.edu</p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (678) 839-4130</p>
                 </div>
             </div>
 
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot duane"></div>
+                    <h3 class="maroon">Dr. Duane Cooper </h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> dcooper@morehouse.edu </p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (404) 653-7920</p>
+                </div>
+            </div>
 
-            <div class="contacts-form container float-in-down">
-                <h3>
-                    Send us a message
-                </h3>
-                <form>
-                    <div class="form-row">
-                        <div class="form-group col-sm-12 col-md-6">
+        </div>
+
+        <div class="row float-in-down">
+
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot jacqueline"></div>
+                    <h3 class="maroon">Dr. Jacqueline Leonard</h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> jleona12@uwyo.edu </p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (307) 766-3776</p>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot robert"></div>
+                    <h3 class="maroon">Dr. Robert T. Palmer </h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> robert.palmer@howard.edu
+                    </p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (202) 806-7342</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row float-in-down">
+
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot christine"></div>
+                    <h3 class="maroon">Dr. Christine D. Thomas</h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> cthomas11@gsu.edu
+                    </p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (404) 413-8065</p>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 contact-card">
+                <div class="contact-person">
+                    <div class="mugshot erica"></div>
+                    <h3 class="maroon">Dr. Erica N. Walker </h3>
+                    <p class="contact-p">
+                        <i class="fas fa-envelope maroon"></i> ewalker@tc.edu </p>
+                    <p class="contact-p">
+                        <i class="fas fa-mobile-alt maroon"></i> (212) 678-8246</p>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="contacts-form container float-in-down">
+            <h3>
+                Send us a message
+            </h3>
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-sm-12 col-md-6">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                        </div>
-                        <div class="form-group col-sm-12 col-md-6">
+                    </div>
+                    <div class="form-group col-sm-12 col-md-6">
                         <label>Name</label>
                         <input type="text" class="form-control" placeholder="Name">
-                        </div>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-sm-12">
-                            <label>Message</label>
-                            <textarea class="form-control" placeholder="Message"></textarea>
-                        </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-sm-12">
+                        <label>Message</label>
+                        <textarea class="form-control" placeholder="Message"></textarea>
                     </div>
-                    <button type="submit" class="submit-button">Submit</button>
-                  </form>
-                
-            </div>
+                </div>
+                <button type="submit" class="submit-button">Submit</button>
+            </form>
+
+        </div>
 
 
 
-    {% include footer.html %}
+        {% include footer.html %}
 
 
-    <script src="{{ 'assets/js/jquery.js' | relative_url }}"></script>
-    <script src="{{ 'assets/js/bootstrap.min.js' | relative_url }}"></script>
-    <script src="{{ 'assets/js/scrollreveal.min.js' | relative_url }}"></script>
-    <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+        <script src="{{ 'assets/js/jquery.js' | relative_url }}"></script>
+        <script src="{{ 'assets/js/bootstrap.min.js' | relative_url }}"></script>
+        <script src="{{ 'assets/js/scrollreveal.min.js' | relative_url }}"></script>
+        <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 
 
 </body>
+
 </html>
