--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -1,3 +1,8 @@
+.head-img-nsf
+    width: 100px
+    height: 100px     
+    
+    
 footer
     p
         color: #fff
@@ -32,4 +37,4 @@ footer
 
     .footer-contact
         p
-            font-size: 10px        
+            font-size: 10px
