--- a/_sass/contact.sass
+++ b/_sass/contact.sass
@@ -76,7 +76,7 @@
         margin-bottom: 50px
 
 .related-publications-div
-    background-image: url("/assets/img/related-publications.jpg")
+    background-image: url("/assets/img/publication.jpg")
 
 .submit-button
     margin: auto
