adjussted footer to center an added related website in publication

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,31 +1,32 @@
 <footer>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-5 footer-contact floating-left">
-                <p>
-                    <i class="fas fa-envelope"></i> info@aamn.com</p>
-                <p>
-                    <i class="fas fa-map-marker-alt"></i> 1601 Maple St, Carrollton, GA 30118</p>
-                <p>
-                    <i class="fas fa-mobile-alt"></i> (404) 000-0000</p>
-            </div>
-            <div class="col-sm-12 col-md-7">
-                <nav class="footer-nav floating-right">
-                    <a href="{{site.url}}" class="maroon">Home</a>
-                    <a href="{{'about.html' | relative_url}}">About</a>
-                    <a href="{{'related-publications.html' | relative_url}}">Related Publications</a>
-                    <a href="{{'advisory-board.html' | relative_url}}">Advisory Board</a>
-                    <a href="{{'contact.html' | relative_url}}">Contact</a>
 
-                </nav>
-                <p class="foot-logo floating-right">
-                    <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""> </p>
-                <p class="foot-logo floating-right">
-                    <img src="{{ 'assets/img/nsf.png' | relative_url }}" class="head-img-nsf img-fluid" alt=""> </p>
+        <nav class="footer-nav floating-right">
+            <a href="{{site.url}}" class="maroon">Home</a>
+            <a href="{{'about.html' | relative_url}}">About</a>
+            <a href="{{'related-publications.html' | relative_url}}">Related Publications</a>
+            <a href="{{'advisory-board.html' | relative_url}}">Advisory Board</a>
+            <a href="{{'contact.html' | relative_url}}">Contact</a>
 
+        </nav>
 
-            </div>
+        <div class="foot-contact floating-right">
+            <p>
+                |
+                <i class="fas fa-envelope"></i> info@aamn.com |</p>
+            <p>
+                |
+                <i class="fas fa-map-marker-alt"></i> 1601 Maple St, Carrollton, GA 30118|</p>
+            <p>
+                |
+                <i class="fas fa-mobile-alt"></i> (404) 000-0000|</p>
         </div>
+        <p class="foot-logo floating-right">
+            <img src="{{ 'assets/img/aammn_white.png' | relative_url }}" class="head-img-res img-fluid" alt=""> </p>
+        <p class="foot-logo floating-right">
+            <img src="{{ 'assets/img/nsf.png' | relative_url }}" class="head-img-nsf img-fluid" alt=""> </p>
+
+
     </div>
     <p class="float-in-down">&copy All Rights reserved </p>
 </footer>
