--- a/_layouts/related-publications.html
+++ b/_layouts/related-publications.html
@@ -89,6 +89,26 @@
                 </p>
             </div>
 
+            <div class="col-xl-5  col-sm-12 col-md-5 learn-card">
+                <h3 class="floating-left">Related Websites</h3>
+
+                <p class="floating-left">
+                    <a href="http://blackengineeringphd.org/" target="_blank" class="p-w-links">- Black Engineering PhD Project.</a>
+                </p>
+                <p class="floating-left">
+                    <a href="http://diversity.utexas.edu/black-male-education-research/" target="_blank" class="p-w-links">- Black Male Education Research Collective.</a>
+                </p>
+                <p class="floating-left">
+                    <a href="http://www.blackphdnetwork.com" target="_blank" class="p-w-links">- Black PhD Network. </a>
+                </p>
+                <p class="floating-left">
+                    <a href="https://blackmaleachievement.org/resources" target="_blank" class="p-w-links">- Campaign for Black Male Achievement.</a>
+                </p>
+                <p class="floating-left">
+                    <a href="http://www.mathematicallygiftedandblack.com/aboutus.html" target="_blank" class="p-w-links">- Mathematically Gifted and Black.</a>
+                </p>
+            </div>
+
         </div>
     </div>
 
@@ -103,9 +123,9 @@
                 <p class="publication-p floating-left">Published by: Robert T. Palmer and Alonzo Flowers.
                 </p>
                 <p class="floating-right">
-                    You can get this book by clicking
+                    You can get this book by
                     <a href="https://www.amazon.com/African-American-Students-Guide-Careers/dp/1610697359/ref=sr_1_1?s=books&ie=UTF8&qid=1534430235&sr=1-1&keywords=African+American+guide+to+STEM+careers"
-                        target="_blank" class="p-links">here.</a>
+                        target="_blank" class="p-links">clicking here.</a>
                 </p>
             </div>
 
@@ -114,9 +134,9 @@
                 <p class="publication-p floating-left">Published by: Erica N. Walker.
                 </p>
                 <p class="floating-right">
-                    You can get this book by clicking
+                    You can get this book by
                     <a href="https://www.amazon.com/Beyond-Banneker-Black-Mathematicians-Excellence/dp/1438452160/ref=sr_1_1?s=books&ie=UTF8&qid=1534429891&sr=1-1&keywords=Beyond+Banneker%3A+Black+Mathematicians+and+the+Paths+to+Excellence
-                        " target="_blank" class="p-links">here.</a>
+                        " target="_blank" class="p-links">clicking here.</a>
                 </p>
             </div>
 
@@ -126,9 +146,9 @@
 
                 </p>
                 <p class="floating-right">
-                    You can get this book by clicking
+                    You can get this book by
                     <a href="https://www.amazon.com/Brilliance-Black-Children-Mathematics/dp/1623960797/ref=sr_1_1?ie=UTF8&qid=1534429789&sr=8-1&keywords=The+Brilliance+of+Black+Children+in+Mathematics"
-                        target="_blank" class="p-links">here.</a>
+                        target="_blank" class="p-links">clicking here.</a>
                 </p>
             </div>
 
