--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -43,6 +43,13 @@ body
     &:hover
         color: #540000    
 
+
+.p-w-links
+    color: #540000
+    font-weight: 600
+    &:hover
+        color: #540000    
+    
 @import header   
 @import home     
 @import learn
