--- a/_sass/footer.sass
+++ b/_sass/footer.sass
@@ -1,6 +1,6 @@
 .head-img-nsf
-    width: 100px
-    height: 100px     
+    width: 80px
+    height: 80px     
     
     
 footer
@@ -10,14 +10,15 @@ footer
     padding-top: 50px
     padding-bottom: 50px
     background-color: #333
-    .footer-contact
-        margin-bottom: 40px
-        color: #fff
-        text-align: left
-        p
-            font-size: 15px 
-                   
 
+    .foot-contact > p
+        text-align: center
+        margin-right: 15px
+        display: inline
+    .foot-contact
+        text-align: center
+        margin-bottom: 40px
+        
     .footer-nav
         margin-bottom: 40px
 
@@ -32,9 +33,15 @@ footer
 
 @media screen and (max-width:520px)
     .footer-nav
+        margin-bottom: 20px
         a
-            font-size: 15px
+            font-size: 13px
+    .head-img-nsf
+        height: 60px
+        width: 60px
 
-    .footer-contact
+
+    .foot-contact
+        margin-bottom: 20px
         p
             font-size: 10px
