added footer information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,9 @@
         <p class="foot-logo floating-right">
             <img src="{{ 'assets/img/nsf.png' | relative_url }}" class="head-img-nsf img-fluid" alt=""> </p>
 
+        <p class="floating-right">Designed by
+            <a href="https://saramcodes.github.io" target="_blank">Saram Iqbal</a>
+        </p>
 
     </div>
     <p class="float-in-down">&copy All Rights reserved </p>
