change saram color to maroon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
             <img src="{{ 'assets/img/nsf.png' | relative_url }}" class="head-img-nsf img-fluid" alt=""> </p>
 
         <p class="floating-right">Designed by
-            <a href="https://saramcodes.github.io" target="_blank">Saram Iqbal</a>
+            <a href="https://saramcodes.github.io" target="_blank" class="maroon">Saram Iqbal</a>
         </p>
 
     </div>
